# Rubik_s_Cube

./: CMakeLists.txt  GenericRubicksCube.cpp  GenericRubicksCube.h  README.md  main.cpp
PatternDatabase/: GenericRubicksCube.cpp  GenericRubicksCube.h  PatternDatabase.h  RubiksCube1dArray.cpp  RubiksCube1dArray.h  RubiksCube3dArray.cpp  RubiksCube3dArray.h  RubiksCubeBitboard.cpp  RubiksCubeBitboard.h
PatternDatabase/Patterns/: CornerDBMaker.cpp  CornerDBMaker.h  CornerPatternDatabase.cpp  CornerPatternDatabase.h  NibbleArray.h  PatternDatabase.cpp  PatternDatabase.h  PermutationIndexer.h
Solver/: BFSSolver.h  DFSSolver.h  IDAstarSolver.h  IDDFSSolver.h
bits/: stdc++.h
